src/test/ui/const-generics/const-param-before-other-params.stderr
error: lifetime parameters must be declared prior to const parameters
  --> $DIR/const-param-before-other-params.rs:3:21
   |
LL | fn bar<const X: (), 'a>(_: &'a ()) {
   |       --------------^^- If I were you, I would simply reorder the parameters: lifetimes, then types, then consts: `<'a, const X: ()>`

error: type parameters must be declared prior to const parameters
  --> $DIR/const-param-before-other-params.rs:7:21
   |
LL | fn foo<const X: (), T>(_: &T) {
   |       --------------^- If I were you, I would simply reorder the parameters: lifetimes, then types, then consts: `<T, const X: ()>`

error: aborting due to 2 previous errors

